--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,3 @@
-workflow "New workflow" {
-  on = "push"
-  resolves = ["Upgrade to Python 3"]
-}
-
-action "Upgrade to Python 3" {
-  secrets = ["GITHUB_TOKEN"]
-  uses = "cclauss/Upgrade-to-Python3@master"
-}
-
 workflow "on push" {
   on = "push"
   resolves = ["Python Style Checker"]
@@ -16,20 +6,10 @@ action "Python Style Checker" {
   uses = "andymckay/pycodestyle-action@master"
 }
 
-workflow "Example Workflow" {
+workflow "Lint Workflow" {
   on = "push"
   resolves = ["Lint"]
 }
 action "Lint" {
   uses = "lgeiger/pyflakes-action@master"
 }
-
-workflow "on push" {
-  on = "push"
-  resolves = ["GitHub Action for cpplint"]
-}
-action "GitHub Action for cpplint" {
-  uses = "cclauss/GitHub-Action-for-cpplint@master"
-  args = "cpplint --recursive ."
-}
-
