--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,15 +1,2 @@
-workflow "on push" {
-  on = "push"
-  resolves = ["Python Style Checker"]
-}
-action "Python Style Checker" {
-  uses = "andymckay/pycodestyle-action@master"
-}
-
-workflow "Lint Workflow" {
-  on = "push"
-  resolves = ["Lint"]
-}
-action "Lint" {
-  uses = "lgeiger/pyflakes-action@master"
-}
+- name: Upgrade to Python 3 
+. uses: cclauss/Upgrade-to-Python3@0.1.0
